// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Localized
  attrs={
    Object {
      "aria-label": true,
    }
  }
  id="moderate-rejectButton"
>
  <ForwardRef(forwardRef)
    aria-label="Reject"
    className="RejectButton-root"
  >
    <ForwardRef(forwardRef)
      className="RejectButton-icon"
      size="lg"
    >
      close
    </ForwardRef(forwardRef)>
  </ForwardRef(forwardRef)>
</Localized>
`;

exports[`renders correctly inverted 1`] = `
<Localized
  attrs={
    Object {
      "aria-label": true,
    }
  }
  id="moderate-rejectButton"
>
  <ForwardRef(forwardRef)
    aria-label="Reject"
    className="RejectButton-root RejectButton-invert"
  >
    <ForwardRef(forwardRef)
      className="RejectButton-icon"
      size="lg"
    >
      close
    </ForwardRef(forwardRef)>
  </ForwardRef(forwardRef)>
</Localized>
`;
